WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242878
AX ITM: Crash in WebKit::NSApplicationAccessibilityFocusedUIElement in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=242878
Summary
AX ITM: Crash in WebKit::NSApplicationAccessibilityFocusedUIElement in isolat...
Andres Gonzalez
Reported
2022-07-18 17:53:21 PDT
Thread 2 Crashed:: com.apple.accessibility.secondary 0 WebKit 0x6bad05ae7 std::__1::unique_ptr<WebCore::FocusController, std::__1::default_delete<WebCore::FocusController> >::operator*() const + 0 (unique_ptr.h:283) [inlined] 1 WebKit 0x6bad05ae7 WebCore::Page::focusController() const + 0 (Page.h:340) [inlined] 2 WebKit 0x6bad05ae7 WebKit::WebPage::windowAndWebPageAreFocused() const + 17 (WebPage.cpp:5325) 3 WebKit 0x6baafac53 WebKit::WebProcess::focusedWebPage() const + 77 (WebProcess.cpp:819) 4 WebKit 0x6ba9b6325 WebKit::NSApplicationAccessibilityFocusedUIElement(NSApplication*, objc_selector*) + 17 (WebProcessCocoa.mm:203) 5 AppKit 0x7ff815f37923 NSAccessibilityGetObjectForAttributeUsingLegacyAPI + 337 6 AppKit 0x7ff815f37085 NSAccessibilityGetObjectValueForAttribute + 2733 7 AppKit 0x7ff815f36156 -[NSAccessibilityAttributeAccessorInfo getAttributeValue:forObject:] + 58 8 AppKit 0x7ff8164e1129 ___NSAccessibilityEntryPointValueForAttribute_block_invoke.848 + 1435 9 AppKit 0x7ff8164dc9cb NSAccessibilityPerformEntryPointObject + 16 10 AppKit 0x7ff81616605e _NSAccessibilityEntryPointValueForAttribute + 168 11 AppKit 0x7ff81628cdcc -[NSObject(NSAccessibilityInternal) _accessibilityValueForAttribute:clientError:] + 354 12 AppKit 0x7ff8162cc0b1 -[NSApplication(NSApplicationAccessibility) _accessibilityValueForAttribute:clientError:] + 49 13 AppKit 0x7ff81629255e CopyAppKitUIElementAttributeValueNoCatch + 98 14 AppKit 0x7ff81628f463 CopyAttributeValue + 125 15 HIServices 0x7ff81855e7b7 _AXXMIGCopyAttributeValue + 633 16 HIServices 0x7ff8185812e5 _XCopyAttributeValue + 441 17 HIServices 0x7ff81853f5f9 mshMIGPerform + 182 18 CoreFoundation 0x7ff812d7d58d __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 41 19 CoreFoundation 0x7ff812d7d4ca __CFRunLoopDoSource1 + 540 20 CoreFoundation 0x7ff812d7c14b __CFRunLoopRun + 2705 21 CoreFoundation 0x7ff812d7b040 CFRunLoopRunSpecific + 560 22 HIServices 0x7ff818562729 axThreadEntry + 126 23 libsystem_pthread.dylib 0x7ff812ca1259 _pthread_start + 125 24 libsystem_pthread.dylib 0x7ff812c9cc7b thread_start + 15
Attachments
Patch
(1.72 KB, patch)
2022-07-18 18:30 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2022-07-19 13:28 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2022-07-19 16:41 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-18 17:53:31 PDT
<
rdar://problem/97230221
>
Andres Gonzalez
Comment 2
2022-07-18 18:30:22 PDT
Created
attachment 460991
[details]
Patch
EWS
Comment 3
2022-07-19 08:08:56 PDT
commit-queue failed to commit
attachment 460991
[details]
to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 4
2022-07-19 11:22:54 PDT
commit-queue failed to commit
attachment 460991
[details]
to WebKit repository. To retry, please set cq+ flag again.
Andres Gonzalez
Comment 5
2022-07-19 13:28:33 PDT
Created
attachment 461018
[details]
Patch
EWS
Comment 6
2022-07-19 15:16:51 PDT
Commit message contains (OOPS!), blocking PR #None
Andres Gonzalez
Comment 7
2022-07-19 16:41:07 PDT
Created
attachment 461024
[details]
Patch
EWS
Comment 8
2022-07-19 18:47:55 PDT
Committed
252629@main
(8c187eff8eb0): <
https://commits.webkit.org/252629@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461024
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug