AX ITM: Crash in WebKit::NSApplicationAccessibilityFocusedUIElement in isolated tree mode. web content https://bugs.webkit.org/show_bug.cgi?id=242878

Reviewed by Chris Fleizach.

Getting the WebProcess::focusedWebPage and thus the Page::focusController() need to be dispatched to the main thread.

* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::NSApplicationAccessibilityFocusedUIElement):

Canonical link: https://commits.webkit.org/252629@main